--- a/page1/index.html
+++ b/page1/index.html
@@ -11,80 +11,94 @@
     <div class="left-panel">
 <div class="docinfo">
     <div class="doc-card">
+      <img class="doc-photo"src="1.jpeg" alt="Doctor Image" />
       <h2>Dr. NAMAN BHATIA</h2>
       <p><strong>Specialization:</strong> Cardiologist</p>
       <p><strong>Experience:</strong> 10 years</p>
-      <p><strong>Contact:</strong> nb001@email.com</p>
-      <p><strong>Phone:</strong> +1 234 567 8901</p>
+      <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div>
     <div class="doc-card">
+      <img class="doc-photo"src="2.jpeg" alt="Doctor Image" />
       <h2>Dr. RK GUPTA</h2>
       <p><strong>Specialization:</strong> Neurologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> rkg@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+  <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div>
     <div class="doc-card">
+      <img class="doc-photo"src="3.jpeg" alt="Doctor Image" />
       <h2>Dr. RAJEEV TYAGI</h2>
       <p><strong>Specialization:</strong> Pediatrician</p>
       <p><strong>Experience:</strong> 12 years</p>
-      <p><strong>Contact:</strong> rt09@email.com</p>
-      <p><strong>Phone:</strong> +1 555 123 4567</p>
+    <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div>
     <div class="doc-card">
+      <img class="doc-photo"src="4.jpeg" alt="Doctor Image" />
       <h2>Dr. MAHESH LAMBHA</h2>
       <p><strong>Specialization:</strong> Neurologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> ml7@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+  <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div><div class="doc-card">
+      <img class="doc-photo"src="8.jpeg" alt="Doctor Image" />
       <h2>Dr. AYUSHMAAN SHARMA</h2>
       <p><strong>Specialization:</strong> Neurologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> ayush007@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+      <p><p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div><div class="doc-card">
+      <img class="doc-photo"src="7.jpeg" alt="Doctor Image" />
       <h2>Dr. BHUPENDER SINGH</h2>
       <p><strong>Specialization:</strong> Gynecologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> bs02@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+    <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div><div class="doc-card">
+      <img class="doc-photo"src="5.jpeg" alt="Doctor Image" />
       <h2>Dr. ANOOP ARPAN</h2>
       <p><strong>Specialization:</strong> Cardiologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> ap007@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+      <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div><div class="doc-card">
+      <img class="doc-photo"src="6.jpeg" alt="Doctor Image" />
       <h2>Dr. VIVEK BHATRA </h2>
       <p><strong>Specialization:</strong> Neurologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> vb89h@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+      <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div><div class="doc-card">
+      <img class="doc-photo"src="5.jpeg" alt="Doctor Image" />
+      <div class="doc-details">
       <h2>Dr. SUNITA SHUKLA</h2>
       <p><strong>Specialization:</strong> Pediatrician</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> ss67@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+    <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
+      </div>
     </div><div class="doc-card">
+      <img class="doc-photo"src="8.jpeg" alt="Doctor Image" />
       <h2>Dr. V.M. SATYAMURTHY</h2>
       <p><strong>Specialization:</strong> Neurologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> jvms@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+    <p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div><div class="doc-card">
+      <img class="doc-photo"src="1.jpeg" alt="Doctor Image" />
       <h2>Dr. KAVITA PASWAN</h2>
       <p><strong>Specialization:</strong> Pediatrician</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> kp@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+<p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div><div class="doc-card">
+      <img class="doc-photo"src="2.jpeg" alt="Doctor Image" />
       <h2>Dr. M.K. SINGH</h2>
       <p><strong>Specialization:</strong> Neurologist</p>
       <p><strong>Experience:</strong> 8 years</p>
-      <p><strong>Contact:</strong> mk@email.com</p>
-      <p><strong>Phone:</strong> +1 987 654 3210</p>
+<p><strong>Qualifications:</strong>
+  <p><strong>Charges:</strong>
     </div>
     <!-- Add more .doc-card blocks as needed -->
   </div>
