--- a/page0/othpage.html
+++ b/page0/othpage.html
@@ -8,8 +8,77 @@
 </head>
 <body>
   <div class="form-container">
-    <input type="text" placeholder="SPECIALIST IN" class="input-box" />
-    <input type="text" placeholder="LOCATION" class="input-box" />
+    <select name ="Specialist" class="input-box">
+      <option value="">Select Specialist</option>
+      <option value="Cardiologist">Cardiologist</option>
+      <option value="Dermatologist">Dermatologist</option>
+      <option value="Neurologist">Neurologist</option>
+      <option value="Pediatrician">Pediatrician</option>
+      <option value="Psychiatrist">Psychiatrist</option>
+      <option value="Radiologist">Radiologist</option>
+      <option value="Surgeon">Surgeon</option>
+      <option value="Urologist">Urologist</option>
+      <option value="Gynecologist">Gynecologist</option>
+      <option value="Oncologist">Oncologist</option>
+      <option value="Ophthalmologist">Ophthalmologist</option>
+      <option value="Orthopedist">Orthopedist</option>
+      <option value="ENT Specialist">ENT Specialist</option>
+    </select>
+
+    <select name="city" class="input-box">
+      <option value="">Select City</option>
+      <option value="Mumbai">Mumbai</option>
+      <option value="Delhi">Delhi</option>
+      <option value="Bengaluru">Bengaluru</option>
+      <option value="Hyderabad">Hyderabad</option>
+      <option value="Ahmedabad">Ahmedabad</option>
+      <option value="Chennai">Chennai</option>
+      <option value="Kolkata">Kolkata</option>
+      <option value="Pune">Pune</option>
+      <option value="Jaipur">Jaipur</option>
+      <option value="Surat">Surat</option>
+      <option value="Lucknow">Lucknow</option>
+      <option value="Kanpur">Kanpur</option>
+      <option value="Nagpur">Nagpur</option>
+      <option value="Indore">Indore</option>
+      <option value="Thane">Thane</option>
+      <option value="Bhopal">Bhopal</option>
+      <option value="Visakhapatnam">Visakhapatnam</option>
+      <option value="Patna">Patna</option>
+      <option value="Vadodara">Vadodara</option>
+      <option value="Ghaziabad">Ghaziabad</option>
+      <option value="Ludhiana">Ludhiana</option>
+      <option value="Agra">Agra</option>
+      <option value="Nashik">Nashik</option>
+      <option value="Faridabad">Faridabad</option>
+      <option value="Meerut">Meerut</option>
+      <option value="Rajkot">Rajkot</option>
+      <option value="Kalyan-Dombivli">Kalyan-Dombivli</option>
+      <option value="Vasai-Virar">Vasai-Virar</option>
+      <option value="Varanasi">Varanasi</option>
+      <option value="Srinagar">Srinagar</option>
+      <option value="Aurangabad">Aurangabad</option>
+      <option value="Dhanbad">Dhanbad</option>
+      <option value="Amritsar">Amritsar</option>
+      <option value="Navi Mumbai">Navi Mumbai</option>
+      <option value="Allahabad">Allahabad</option>
+      <option value="Ranchi">Ranchi</option>
+      <option value="Howrah">Howrah</option>
+      <option value="Coimbatore">Coimbatore</option>
+      <option value="Jabalpur">Jabalpur</option>
+      <option value="Gwalior">Gwalior</option>
+      <option value="Vijayawada">Vijayawada</option>
+      <option value="Jodhpur">Jodhpur</option>
+      <option value="Madurai">Madurai</option>
+      <option value="Raipur">Raipur</option>
+      <option value="Kota">Kota</option>
+      <option value="Guwahati">Guwahati</option>
+      <option value="Chandigarh">Chandigarh</option>
+      <option value="Solapur">Solapur</option>
+      <option value="Hubli–Dharwad">Hubli–Dharwad</option>
+      <option value="Bareilly">Bareilly</option>
+    </select>
+    
     <button class="submit-btn">SUBMIT</button>
   </div>
 </body>
